--- a/01_python_basico.ipynb
+++ b/01_python_basico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+VH7YiZdROiENkb2NgT5+",
+      "authorship_tag": "ABX9TyMqqs3zQLXwIVqkdWYk9gKx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,22 +219,22 @@
       "cell_type": "code",
       "source": [
         "import time\n",
-        "%timeit(time.sleep(1))"
+        "%timeit (time.sleep(1))"
       ],
       "metadata": {
         "id": "O6cwN1s4ExYA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b78f7ad5-010f-4df1-982b-f0c8c16a62b7"
+        "outputId": "69aa5c7d-5fe6-4f70-a1c4-fec08b114714"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "UsageError: Line magic function `%timeit(time.sleep(1))` not found.\n"
+            "1 s ± 207 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
           ]
         }
       ]
