--- a/02_fundamentos_python.ipynb
+++ b/02_fundamentos_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgXJgXzYMR8lMvKRkdLn8P",
+      "authorship_tag": "ABX9TyPsUsv4VXpHUcWYVhCA1Qre",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -840,7 +840,7 @@
       "source": [
         "### **Declarações print**\n",
         "\n",
-        "A função `print`gera texto no fluxo de saída."
+        "A função `print` gera texto no fluxo de saída."
       ],
       "metadata": {
         "id": "T2MPAFfgoy5M"
@@ -856,9 +856,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KJRJ-x2Splk2",
-        "outputId": "d1aaffe3-f1e4-4e18-bd06-cd996d0438c4"
+        "outputId": "7d97f2cb-e151-4dfb-fde8-bc8391181811"
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,9 +879,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n5okmO7GpnhW",
-        "outputId": "1904187d-aff5-4d77-cb39-8f971fa5fb88"
+        "outputId": "651545a9-fb55-422e-d256-f146205108f3"
       },
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,9 +902,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AuUzu3MBprsj",
-        "outputId": "38c44d74-ae6f-4f19-8344-a026f325fbc7"
+        "outputId": "f14de1d0-86d7-40b4-ccb5-b2392c88d04d"
       },
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,9 +925,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2hPvVjcdp1I7",
-        "outputId": "388eaacb-b8ef-4e93-ffec-566d8255bb61"
+        "outputId": "8fbaf503-1bf6-43c2-ce3b-fcf8fd0c2410"
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,6 +935,271 @@
           "text": [
             "1->a\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Operações matemáticas básicas\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4-2y0oQCrMYH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2 + 3 #adição"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gaFzVrEMrIda",
+        "outputId": "fb08a6c4-623d-42bb-85dc-43e1e955f5e8"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 - 6 #subtração"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dGmlhjVdrYuC",
+        "outputId": "d147e043-280a-4be2-babb-7890f93deaa5"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3*4 #multiplicação"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hjnToS_lranS",
+        "outputId": "056b53af-54b0-4c78-e0ba-decfd31fe565"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "9/3 #divisão"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pOyY-Vl7rdN2",
+        "outputId": "525651d1-a057-4d81-d76d-7cc523a8bcef"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "2**3 #elevado"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rLWMKqI5reyL",
+        "outputId": "c3b46f65-8cc9-4c20-a6df-aba2b6d51775"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Para limitar o resultado da divisão por números inteiros e não como ponto flutuante é só usar duas barras\n",
+        "9//3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qwlfWCOTri62",
+        "outputId": "b8fd51e6-36da-4a69-eec0-1a1b19c3ea2d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Até mesmo para resultados que apresentam decimal\n",
+        "5//2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "487jxZICsyse",
+        "outputId": "d7113a8f-55dd-436e-ae32-14f280049938"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5%2 #módulo - retorna o resto de uma divisão"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HGx0B0Bas78q",
+        "outputId": "ddaae1e1-c833-4ee9-cfa4-162c1e19f2bb"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O módulo é útil para determinar se um número é fator de outro (resto 0) para isso usa-se a palavra-chave `is`."
+      ],
+      "metadata": {
+        "id": "StCXOnCetKhC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "14%7 is 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lwnngq95tF3V",
+        "outputId": "1ad830b9-d17f-498c-9b97-f08cbd4b4c54"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<>:1: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<>:1: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<ipython-input-38-7b6914c0d70f>:1: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "  14%7 is 0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
         }
       ]
     }
